Fix word wrap

--- a/sass/_00_defaults.scss
+++ b/sass/_00_defaults.scss
@@ -15,7 +15,8 @@ pre {
     white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
     white-space: -pre-wrap;      /* Opera 4-6 */
     white-space: -o-pre-wrap;    /* Opera 7 */
-    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+    overflow-wrap: break-word;
+    word-break: break-all;
 }
 
 img {
